modified:   .gitignore 	new file:   Clon_MultiLang_SQL_Games/gatesofolympus.club/Generator_py_sql_modx_resourse.py 	new file:   Linkbilding_Selenium/Webdriver_Chrome/114-0-5735-90/LICENSE.chromedriver 	new file:   Linkbilding_Selenium/Webdriver_Chrome/114-0-5735-90/chromedriver.exe 	new file:   Linkbilding_Selenium/Webdriver_Firefox/geckodriver.exe 	new file:   Linkbilding_Selenium/baza_links/__init__.py 	new file:   Linkbilding_Selenium/baza_template_comments/__init__.py 	new file:   Linkbilding_Selenium/baza_template_comments/templ_comments_en.py 	new file:   Linkbilding_Selenium/captcha_img copy 2.py 	new file:   Linkbilding_Selenium/captcha_img copy.py 	new file:   Linkbilding_Selenium/captcha_img.py 	new file:   Linkbilding_Selenium/cookies/t1.pkl 	new file:   Linkbilding_Selenium/def_OpenAi_promt.py 	modified:   Linkbilding_Selenium/del_test.py 	new file:   Linkbilding_Selenium/gmail_autorization.py 	new file:   Linkbilding_Selenium/gmail_login.py 	new file:   Linkbilding_Selenium/main 9 undetected chrome.py 	deleted:    Linkbilding_Selenium/main2.py 	new file:   Linkbilding_Selenium/main6-1.py 	new file:   Linkbilding_Selenium/main6-2.py 	new file:   Linkbilding_Selenium/main8 undetected chrome.py 	new file:   Linkbilding_Selenium/main8-mozilla.py 	new file:   Linkbilding_Selenium/most_frequent_phrase.py 	modified:   Test_my/test.js 	modified:   Test_my/test5.py 	new file:   geckodriver.log

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /images_unik/*
 /all_images/*
 /__pycache__/*
+__pycache__
 *.webp
 *.jpg
 *.csv
@@ -13,3 +14,6 @@ config.py
 /temp
 *.txt
 /*SEO*
+test*
+del_*
+/cookies/*
