modified:   .gitignore 	new file:   GOOGLE/BOT_GOOGLE_POISK/app/app_user_agent_Firefox_random.py 	new file:   GOOGLE/BOT_GOOGLE_POISK/app/app_user_agent_random.py 	new file:   GOOGLE/BOT_GOOGLE_POISK/bot_google_klick_oneKey_v1.py 	new file:   GOOGLE/Google_mapsCID_Poxy_bot/app/app_user_agent_Firefox_random.py 	new file:   GOOGLE/Google_mapsCID_Poxy_bot/bot_Firefox_CID_Poxy_v1.py 	modified:   GOOGLE/Google_mapsCID_Poxy_bot/bot_Google_CID_Poxy_v1.py 	new file:   GOOGLE/Google_mapsCID_Poxy_bot/bot_selenChrome_stroim_marshrut_v2.py 	new file:   GOOGLE/Google_mapsCID_Poxy_bot/bot_selenFirefox_stroim_marshrut_v3.py 	renamed:    GOOGLE/Google_maps_Adress_API/google_adress_api.py -> GOOGLE/Google_maps_Adress_API/google_adress_map_api_v1.py 	new file:   GOOGLE/Google_maps_Adress_API/google_adress_map_api_v2_startPin.py 	modified:   GOOGLE/Google_maps_Adress_API/google_cid_adress_api_v2.py 	new file:   Linkbilding/SHORT_URL/gener_short_url.py 	new file:   Parsing/Parsing_BisM/app/app_llama_v1.py 	new file:   Parsing/Parsing_BisM/bism_CSV_in_SQL_site.py 	new file:   Parsing/Parsing_BisM/csv_add_Llama_bism__TEST.py 	new file:   Parsing/Parsing_BisM/only_parce_bism.py 	modified:   Parsing/Parsing_BisM/parce_bism.py 	new file:   Parsing/Wikipedia/drop_status_json_v1.py 	new file:   Parsing/Wikipedia/scrapy_Wiki_domain_drop_FULL_v2.py 	new file:   Parsing/Wikipedia/scrapy_Wiki_domain_drop_v1.py 	new file:   Parsing/Wikipedia/take_KodOtveta_domains copy.py

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /all_images/*
 /bazaBacklinks/*
 /__pycache__/*
+/httpcache/*
 __pycache__
 *.webp
 *.jpg
@@ -28,3 +29,6 @@ del_*
 llama-main/
 llama/
 Webdriver_Chrome/
+scrapy/*
+/.scrapy/*
+/.scrapy/
