modified:   .gitignore 	modified:   GOOGLE/Google_mapsCID_Poxy_bot/bot_Chrome_CID_Poxy_NOLIMIT_v3.py 	modified:   GOOGLE/Google_maps_Adress_API/one-generator-URL-by-CID.py 	new file:   GSA/Find_urls_in_all_TXT_files/find_all_urls_in_all_txt_filesBaza.py 	new file:   Linkbilding2/Profile_auto_1/app/app_AI_TheBloke_v1.py 	new file:   Linkbilding2/Profile_auto_1/app/app_email_genera_and_openLink.py 	new file:   Linkbilding2/Profile_auto_1/app/app_generate_login.py 	new file:   Linkbilding2/Profile_auto_1/app/app_generate_text.py 	new file:   Linkbilding2/Profile_auto_1/app_captcha/captcha_Tesseract_img.py 	new file:   Linkbilding2/Profile_auto_1/bot_Linkbilding_Profile_Spam_v1.py 	new file:   Linkbilding2/Profile_auto_1/profiles_baza/www.wikidot.com.py 	new file:   Links_Chistim_na_200/Links_Txt_on_CSV_StatusCode.py 	new file:   Parsing/Parsing_HARD_777/app/app_edit__css_vulkan_casino.py 	new file:   Parsing/Parsing_HARD_777/app/app_edit__js_files.py 	new file:   Parsing/Parsing_HARD_777/app/app_generate_html_links_from_json.py 	new file:   Parsing/Parsing_HARD_777/app/app_perelinkovka__insert_links_into_html.py 	new file:   Parsing/Parsing_HARD_777/app/app_remove_scripts_symbols_other.py 	new file:   Parsing/Parsing_HARD_777/app/app_sitemap_xml.py 	new file:   Parsing/Parsing_HARD_777/app/ru_cazino_sinonim.py 	new file:   Parsing/Parsing_HARD_777/need_logika_scripts/AUTO_robots.py 	new file:   Parsing/Parsing_HARD_777/need_logika_scripts/linkPartner.php 	new file:   Parsing/Parsing_HARD_777/output_parse_sites/klon_aqua-park_1/AUTO_robots.py 	new file:   Parsing/Parsing_HARD_777/output_parse_sites/klon_aqua-park_1/assets/themes/default.css 	new file:   Parsing/Parsing_HARD_777/output_parse_sites/klon_aqua-park_1/faq.html 	new file:   Parsing/Parsing_HARD_777/output_parse_sites/klon_aqua-park_1/favicon.ico 	new file:   Parsing/Parsing_HARD_777/output_parse_sites/klon_aqua-park_1/index.html 	new file:   Parsing/Parsing_HARD_777/output_parse_sites/klon_aqua-park_1/linkPar

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@
 __pycache__
 *.webp
 *.jpg
+*.xml
+*.htaccess
+*.log
+*.png
+*.svg
+*.wav
 *.csv
 *.zip
 *.rar
@@ -33,3 +39,4 @@ Webdriver_Chrome/
 scrapy/*
 /.scrapy/*
 /.scrapy/
+/GOOGLE_API_INDEXER/*
